Updated storageaccount name paramenter

--- a/azure-pipeline2.yml
+++ b/azure-pipeline2.yml
@@ -31,4 +31,4 @@ stages:
         templateLocation: 'Linked artifact'
         csmFile: 'mystorage.json'
         deploymentMode: 'Incremental'
-        overrideParameters: --storageAccountName sg09062023
+        overrideParameters: -storageAccountName sg09062023
