--- a/azure-pipeline2.yml
+++ b/azure-pipeline2.yml
@@ -44,3 +44,16 @@ stages:
         csmFile: 'mystorage.json'
         deploymentMode: 'Incremental'
         overrideParameters: -storageAccountName sg0906202302
+    - task: AzureResourceManagerTemplateDeployment@3
+      inputs:
+        deploymentScope: 'Resource Group'
+        azureResourceManagerConnection: 'Azure subscription 1(d335a5bd-1676-4e8e-ba9b-8565858d44ec)'
+        subscriptionId: 'd335a5bd-1676-4e8e-ba9b-8565858d44ec'
+        action: 'Create Or Update Resource Group'
+        resourceGroupName: 'Resourcegroup'
+        location: 'East US 2'
+        templateLocation: 'Linked artifact'
+        csmFile: 'mystoragebicep.bicep'
+        deploymentMode: 'Incremental'
+        deploymentName: 'bicepstorageaccount'
+        #overrideParameters: -storageAccountName sg0906202302
